# routes/api.php
@@ -7,6 +7,12 @@ use App\Http\Controllers\Api\AuthController;
 
 Route::get('/posts', [PostController::class, 'index']);
 
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/posts', [PostController::class, 'store']);
+    Route::put('/posts/{id}', [PostController::class, 'update']);
+    Route::delete('/posts/{id}', [PostController::class, 'destroy']);
+});
+
 // Authentication
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
